--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1,5 +1,7 @@
-html {
-  background-color: #000;
-  font-size: 50px;
-  color: #000;
-}
+@charset "UTF-8";
+/*
+	> npm rum gulp 			--でscssコンパイルを監視
+
+	モバイルファーストとする
+		> 携帯画面のCSSを上に
+*/
