--- a/assets/scss/_valiables.scss
+++ b/assets/scss/_valiables.scss
@@ -1,2 +1,9 @@
 // main colors
 //$main-color: 
+
+$bg-color: #cccccc;
+$text-color: #333333;
+$link-color: #3583aa;
+$visited-color: #788d98;
+
+$hover-bg: rgba(255,255,255,0.4);
