--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -5,3 +5,104 @@
 		> 携帯画面のCSSを上に
 */
 @import 'valiables';
+
+
+// リセットCSS
+@font-face{
+	font-family: 'yu';
+	src: url(../fonts/YuGothL.ttc) format("truetype");
+}
+@font-face{
+	font-family: 'smart';
+	src: url(../fonts/03スマートフォントUI.otf) format("opentype");
+}
+html{
+	font-family: 'yu','smart','sans-serif'; // フォントデータの指定
+	margin: 0;
+	padding: 0;
+
+	body{
+		margin: 0;
+		color: $text-color;
+		font-size: 15px;
+		line-height: 2;
+	}
+}
+ul{
+	list-style: none;
+	margin: 0;
+	padding: 0;
+	li{
+	}
+}
+p, h1, h2, h3, h4, h5, h6{
+	margin-top: 0;
+}
+img{
+	vertical-align: bottom;
+}
+
+
+// PC表示
+@media screen and ( min-width:1000px ){	
+body{
+	background-color: $bg-color;
+}
+header{
+	width: 960px;
+	height: 100px;
+	margin: 0 auto;
+	// display: flex;
+	// flex-wrap:wrap;
+	.global-nav{
+		display: inline-block;
+		ul{
+			display: flex;
+			flex-wrap: wrap;
+			li{
+				display: inline-block;
+				padding: 0 20px; 
+				height: 35px;
+				&:hover{
+					background-color: $hover-bg;
+					border-radius: 3px;
+				}
+				a{
+					color: #fff;
+					text-decoration: none;
+					padding-bottom: 3px;
+					&:visited{
+						color: $visited-color;
+					}
+					&:hover{
+						// text-decoration: underline;
+						border-bottom: 2px solid #fff;
+					}
+				}
+			}
+		}
+	}
+	.logo{
+		display: inline-block;
+		margin-top: 50px;
+		width: calc( 100% - 265px);
+	}
+}
+
+#wrap{
+	min-height: calc( 100vh - 100px - 70px ); // 最低でもフッターが一番下になるように高さを確保
+}
+
+footer{
+	text-align: center;
+	color: #fff;
+	padding: 20px 0;
+	small{
+		font-size: 12px;
+	}
+}
+}
+
+
+// 携帯画面用
+// @media screen and ( max-width:1000px ){}
