2018 04 26 end capter 5 add font 'Arial-Black'

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -15,6 +15,11 @@
   src: url(../fonts/03スマートフォントUI.otf) format("opentype");
 }
 
+@font-face {
+  font-family: 'arial';
+  src: url(../fonts/ariblk.ttf) format("truetype");
+}
+
 html {
   font-family: 'yu','smart','sans-serif';
   margin: 0;
@@ -40,6 +45,26 @@ p, h1, h2, h3, h4, h5, h6 {
 
 img {
   vertical-align: bottom;
+}
+
+.btn a {
+  background-color: #009cd3;
+  color: #fff;
+  font-size: 20px;
+  font-family: 'arial','Bitter', serif;
+  width: 185px;
+  display: block;
+  text-align: center;
+  text-decoration: none;
+  line-height: 50px;
+  margin-top: 20px;
+  border: 3px solid #009cd3;
+  border-radius: 2px;
+}
+
+.btn a:hover {
+  background-color: #fff;
+  color: #009cd3;
 }
 
 @media screen and (min-width: 1000px) {
@@ -86,12 +111,47 @@ img {
   #wrap {
     min-height: calc( 100vh - 100px - 70px);
   }
+  #wrap .content {
+    width: 960px;
+    margin: 0 auto;
+  }
   footer {
     text-align: center;
     color: #fff;
     padding: 20px 0;
+    font-family: 'arial', 'Bitter', sans-serif;
+  }
+  footer a {
+    color: #fff;
+    text-decoration: none;
   }
   footer small {
     font-size: 12px;
+  }
+  #index {
+    background-image: url(../../pages/images/bg-index.jpg);
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-attachment: fixed;
+    background-size: cover;
+  }
+  #index .content {
+    margin-top: 150px;
+  }
+  #index .content .index_title {
+    font-size: 100px;
+    line-height: 1;
+    color: #fff;
+    font-family: 'arial','Bitter', serif;
+    margin-bottom: 50px;
+  }
+  #index .content p {
+    font-size: 16px;
+    color: #fff;
+  }
+  #index .index_footer {
+    width: 960px;
+    margin: 0 auto;
+    text-align: left;
   }
 }
