--- a/assets/scss/_valiables.scss
+++ b/assets/scss/_valiables.scss
@@ -7,3 +7,6 @@ $link-color: #3583aa;
 $visited-color: #788d98;
 
 $hover-bg: rgba(255,255,255,0.4);
+
+$btn-color: #009cd3;
+$btn-hover-color: #60c3e7;
