0510 finish capter 6 add favicon add about page modifi common

--- a/assets/scss/_valiables.scss
+++ b/assets/scss/_valiables.scss
@@ -2,11 +2,16 @@
 //$main-color: 
 
 $bg-color: #cccccc;
+$footer-bg-color: #767671;
 $text-color: #333333;
 $link-color: #3583aa;
 $visited-color: #788d98;
+
+$th-color: #f0f0f0;
 
 $hover-bg: rgba(255,255,255,0.4);
 
 $btn-color: #009cd3;
 $btn-hover-color: #60c3e7;
+
+$icon_color: #9cb4a4;
