--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -97,7 +97,7 @@ header{
 					text-decoration: none;
 					padding-bottom: 3px;
 					&:visited{
-						color: $visited-color;
+						color: #fff;
 					}
 					&:hover{
 						// text-decoration: underline;
@@ -125,6 +125,7 @@ footer{
 	text-align: center;
 	color: #fff;
 	padding: 20px 0;
+	background-color: $footer-bg-color;
 	font-family: 'arial', 'Bitter', sans-serif;
 	a{
 		color: #fff;
@@ -134,7 +135,7 @@ footer{
 		font-size: 12px;
 	}
 }
-#index{ //indexページのみ適応させる
+#index, #about{ //indexページのみ適応させる
 	background-image: url(../../pages/images/bg-index.jpg);
 	background-repeat: no-repeat;
 	background-position: center center;
@@ -159,8 +160,77 @@ footer{
 		width: 960px;
 		margin: 0 auto;
 		text-align: left;
+		background-color: transparent;
 	}
 }	// indexのみ
+
+#about{
+	background-image: url(../../pages/images/bg-about.jpg);
+	background-size: 100% auto;
+	background-position: center top;
+	color: #000;
+	#wrap{
+		background-color: #fff;
+		margin-top: 220px;
+		padding: 35px;
+		.main-center{
+			width: 940px;
+		}
+		.content{
+			margin-top: 0;
+		}
+		p{
+			color: #000;
+		}
+		h1{
+			font-family: 'arial','Bitter', serif;
+			font-size: 36px;
+			border-bottom: 1px solid #cccccc;
+		}
+		h2{
+			font-family: 'arial','Bitter', serif;
+			font-size: 24px;
+		}
+		section{
+			margin-bottom: 35px;
+			.icon:before{
+				content:"";
+				padding-right: 10px;
+				border-left: 7px solid $icon_color;
+			}
+		}
+		
+		.profile{
+			display: flex;
+			flex-wrap: wrap;
+			.profile-image{
+				margin-left: 60px;
+			}
+			.profile-text{
+				width: 540px;
+				display: inline-block;
+			}
+		}
+		.career{
+			
+			table{
+				border-spacing: 0;
+				border-collapse: collapse;
+				th{
+					width: 240px;
+					background-color: $th-color;
+					padding: 12px 0;
+					border: 1px solid #cccccc;
+				}
+				td{
+					width: 660px;
+					padding: 12px 0 12px 40px;
+					border: 1px solid #cccccc;
+				}
+			}
+		}
+	}
+} // aboutのみ
 
 
 } // デスクトップ用終わり
