--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -156,67 +156,106 @@ img {
     text-align: left;
     background-color: transparent;
   }
-  #about {
+  #about, #portfolio {
     background-image: url(../../pages/images/bg-about.jpg);
     background-size: 100% auto;
     background-position: center top;
     color: #000;
   }
-  #about #wrap {
+  #about #wrap, #portfolio #wrap {
     background-color: #fff;
     margin-top: 220px;
     padding: 35px;
   }
-  #about #wrap .main-center {
+  #about #wrap .main-center, #portfolio #wrap .main-center {
     width: 940px;
   }
-  #about #wrap .content {
+  #about #wrap .content, #portfolio #wrap .content {
     margin-top: 0;
   }
-  #about #wrap p {
+  #about #wrap p, #portfolio #wrap p {
     color: #000;
   }
-  #about #wrap h1 {
+  #about #wrap h1, #portfolio #wrap h1 {
     font-family: 'arial','Bitter', serif;
     font-size: 36px;
     border-bottom: 1px solid #cccccc;
   }
-  #about #wrap h2 {
+  #about #wrap h2, #portfolio #wrap h2 {
     font-family: 'arial','Bitter', serif;
     font-size: 24px;
   }
-  #about #wrap section {
+  #about #wrap section, #portfolio #wrap section {
     margin-bottom: 35px;
   }
-  #about #wrap section .icon:before {
+  #about #wrap section .icon:before, #portfolio #wrap section .icon:before {
     content: "";
     padding-right: 10px;
     border-left: 7px solid #9cb4a4;
   }
-  #about #wrap .profile {
+  #about #wrap .profile, #portfolio #wrap .profile {
     display: flex;
     flex-wrap: wrap;
   }
-  #about #wrap .profile .profile-image {
+  #about #wrap .profile .profile-image, #portfolio #wrap .profile .profile-image {
     margin-left: 60px;
   }
-  #about #wrap .profile .profile-text {
+  #about #wrap .profile .profile-text, #portfolio #wrap .profile .profile-text {
     width: 540px;
     display: inline-block;
   }
-  #about #wrap .career table {
+  #about #wrap .career table, #portfolio #wrap .career table {
     border-spacing: 0;
     border-collapse: collapse;
   }
-  #about #wrap .career table th {
+  #about #wrap .career table th, #portfolio #wrap .career table th {
     width: 240px;
     background-color: #f0f0f0;
     padding: 12px 0;
     border: 1px solid #cccccc;
   }
-  #about #wrap .career table td {
+  #about #wrap .career table td, #portfolio #wrap .career table td {
     width: 660px;
     padding: 12px 0 12px 40px;
     border: 1px solid #cccccc;
+  }
+  #portfolio {
+    background-image: url(../../pages/images/bg-portfolio.jpg);
+    background-attachment: fixed;
+  }
+  #portfolio .content {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  #portfolio .main {
+    display: inline-block;
+    width: 700px;
+    margin: 0 10px;
+  }
+  #portfolio .main a img:hover {
+    opacity: 0.8;
+  }
+  #portfolio .sideber {
+    font-family: 'arial','Bitter', sans-serif;
+    display: inline-block;
+    width: 200px;
+    margin: 0 0 0 30px;
+  }
+  #portfolio .sideber h2 {
+    margin-bottom: 10px;
+  }
+  #portfolio .sideber ul {
+    font-size: 16px;
+    margin-left: 20px;
+    padding: 0;
+    margin: 0;
+  }
+  #portfolio .sideber a {
+    text-decoration: none;
+    color: #333333;
+    display: block;
+  }
+  #portfolio .sideber a:hover {
+    background-color: #767671;
   }
 }
