--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -164,7 +164,7 @@ footer{
 	}
 }	// indexのみ
 
-#about{
+#about, #portfolio{
 	background-image: url(../../pages/images/bg-about.jpg);
 	background-size: 100% auto;
 	background-position: center top;
@@ -231,6 +231,46 @@ footer{
 		}
 	}
 } // aboutのみ
+
+#portfolio{
+	background-image: url(../../pages/images/bg-portfolio.jpg);
+	background-attachment: fixed;
+	.content{
+		display: flex;
+		flex-wrap: wrap;
+	}
+	.main{
+		display: inline-block;
+		width: 700px;
+		margin: 0 10px;
+		a img:hover{
+			opacity: 0.8;
+		}
+	}
+	.sideber{
+		font-family: 'arial','Bitter', sans-serif;
+		display: inline-block;
+		width: 200px;
+		margin: 0 0 0 30px;
+		h2{
+			margin-bottom: 10px;
+		}
+		ul{
+			font-size: 16px;
+			margin-left: 20px;
+			padding: 0;
+			margin: 0;
+		}
+		a{
+			text-decoration: none;
+			color:$text-color;
+			display: block;
+			&:hover{
+				background-color: $footer-bg-color;
+			}
+		}
+	}
+} //portfolioのみ
 
 
 } // デスクトップ用終わり
