--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -129,133 +129,151 @@ img {
   footer small {
     font-size: 12px;
   }
-  #index, #about {
+  #index, #about, #photograph {
     background-image: url(../../pages/images/bg-index.jpg);
     background-repeat: no-repeat;
     background-position: center center;
     background-attachment: fixed;
     background-size: cover;
   }
-  #index .content, #about .content {
+  #index .content, #about .content, #photograph .content {
     margin-top: 150px;
   }
-  #index .content .index_title, #about .content .index_title {
+  #index .content .index_title, #about .content .index_title, #photograph .content .index_title {
     font-size: 100px;
     line-height: 1;
     color: #fff;
     font-family: 'arial','Bitter', serif;
     margin-bottom: 50px;
   }
-  #index .content p, #about .content p {
+  #index .content p, #about .content p, #photograph .content p {
     font-size: 16px;
     color: #fff;
   }
-  #index .index_footer, #about .index_footer {
+  #index .index_footer, #about .index_footer, #photograph .index_footer {
     width: 960px;
     margin: 0 auto;
     text-align: left;
     background-color: transparent;
   }
-  #about, #portfolio {
+  #about, #portfolio, #photograph {
     background-image: url(../../pages/images/bg-about.jpg);
     background-size: 100% auto;
     background-position: center top;
     color: #000;
   }
-  #about #wrap, #portfolio #wrap {
+  #about #wrap, #portfolio #wrap, #photograph #wrap {
     background-color: #fff;
     margin-top: 220px;
     padding: 35px;
   }
-  #about #wrap .main-center, #portfolio #wrap .main-center {
+  #about #wrap .main-center, #portfolio #wrap .main-center, #photograph #wrap .main-center {
     width: 940px;
   }
-  #about #wrap .content, #portfolio #wrap .content {
+  #about #wrap .content, #portfolio #wrap .content, #photograph #wrap .content {
     margin-top: 0;
   }
-  #about #wrap p, #portfolio #wrap p {
+  #about #wrap p, #portfolio #wrap p, #photograph #wrap p {
     color: #000;
   }
-  #about #wrap h1, #portfolio #wrap h1 {
+  #about #wrap h1, #portfolio #wrap h1, #photograph #wrap h1 {
     font-family: 'arial','Bitter', serif;
     font-size: 36px;
     border-bottom: 1px solid #cccccc;
   }
-  #about #wrap h2, #portfolio #wrap h2 {
+  #about #wrap h2, #portfolio #wrap h2, #photograph #wrap h2 {
     font-family: 'arial','Bitter', serif;
     font-size: 24px;
   }
-  #about #wrap section, #portfolio #wrap section {
+  #about #wrap section, #portfolio #wrap section, #photograph #wrap section {
     margin-bottom: 35px;
   }
-  #about #wrap section .icon:before, #portfolio #wrap section .icon:before {
+  #about #wrap section .icon:before, #portfolio #wrap section .icon:before, #photograph #wrap section .icon:before {
     content: "";
     padding-right: 10px;
     border-left: 7px solid #9cb4a4;
   }
-  #about #wrap .profile, #portfolio #wrap .profile {
+  #about #wrap .profile, #portfolio #wrap .profile, #photograph #wrap .profile {
     display: flex;
     flex-wrap: wrap;
   }
-  #about #wrap .profile .profile-image, #portfolio #wrap .profile .profile-image {
+  #about #wrap .profile .profile-image, #portfolio #wrap .profile .profile-image, #photograph #wrap .profile .profile-image {
     margin-left: 60px;
   }
-  #about #wrap .profile .profile-text, #portfolio #wrap .profile .profile-text {
+  #about #wrap .profile .profile-text, #portfolio #wrap .profile .profile-text, #photograph #wrap .profile .profile-text {
     width: 540px;
     display: inline-block;
   }
-  #about #wrap .career table, #portfolio #wrap .career table {
+  #about #wrap .career table, #portfolio #wrap .career table, #photograph #wrap .career table {
     border-spacing: 0;
     border-collapse: collapse;
   }
-  #about #wrap .career table th, #portfolio #wrap .career table th {
+  #about #wrap .career table th, #portfolio #wrap .career table th, #photograph #wrap .career table th {
     width: 240px;
     background-color: #f0f0f0;
     padding: 12px 0;
     border: 1px solid #cccccc;
   }
-  #about #wrap .career table td, #portfolio #wrap .career table td {
+  #about #wrap .career table td, #portfolio #wrap .career table td, #photograph #wrap .career table td {
     width: 660px;
     padding: 12px 0 12px 40px;
     border: 1px solid #cccccc;
   }
-  #portfolio {
+  #portfolio, #photograph {
     background-image: url(../../pages/images/bg-portfolio.jpg);
     background-attachment: fixed;
   }
-  #portfolio .content {
+  #portfolio .content, #photograph .content {
     display: flex;
     flex-wrap: wrap;
   }
-  #portfolio .main {
+  #portfolio .main, #photograph .main {
     display: inline-block;
     width: 700px;
     margin: 0 10px;
   }
-  #portfolio .main a img:hover {
+  #portfolio .main a img:hover, #photograph .main a img:hover {
     opacity: 0.8;
   }
-  #portfolio .sideber {
+  #photograph {
+    background-image: url(../../pages/images/bg-photograph.jpg);
+  }
+  #photograph .gp {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  #photograph .gp .gi {
+    display: inline-block;
+    margin-bottom: 15px;
+    margin-right: 15px;
+  }
+  #photograph .gp .gi:nth-child(3n) {
+    margin-right: 0;
+  }
+  .video {
+    background-image: url(../../pages/images/bg-video.jpg) !important;
+  }
+  .sideber {
     font-family: 'arial','Bitter', sans-serif;
     display: inline-block;
     width: 200px;
     margin: 0 0 0 30px;
   }
-  #portfolio .sideber h2 {
+  .sideber h2 {
     margin-bottom: 10px;
   }
-  #portfolio .sideber ul {
+  .sideber ul {
     font-size: 16px;
     margin-left: 20px;
     padding: 0;
     margin: 0;
   }
-  #portfolio .sideber a {
+  .sideber a {
     text-decoration: none;
     color: #333333;
     display: block;
   }
-  #portfolio .sideber a:hover {
+  .sideber a:hover {
     background-color: #767671;
   }
 }
