--- a/assets/scss/_valiables.scss
+++ b/assets/scss/_valiables.scss
@@ -4,8 +4,9 @@
 $bg-color: #cccccc;
 $footer-bg-color: #767671;
 $text-color: #333333;
-$link-color: #3583aa;
+$link-color: #587f92;
 $visited-color: #788d98;
+$form-bg-color: #eaeaea;
 
 $th-color: #f0f0f0;
 
